--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
     z-index: 10;
 }
 
+
 .nav::before {
     content: "";
     position: fixed;
@@ -60,7 +61,7 @@ body {
 }
 
 .nav-item {
-    margin: 0 20px;
+    margin: 0 10px;
     padding: 10px 20px;
     color: #fff;
     transition: all .5s ease-out;
@@ -107,27 +108,40 @@ a {
     font-size: 40px;
 }
 
-#o-mnie {
-    scroll-margin: 75px;
-}
-
 #o-mnie > h1 {
     text-align: right;
 }
 
 section {
+    scroll-margin: 75px;
     padding: 20px 10vw;
 }
 
 .o-mnie-content {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
+    grid-template-areas: "left right";
+    gap: 20px;
     margin: 40px 10vw;
+    text-align: justify;
+    justify-content: center;
 }
 
-.o-mnie-column {
-    text-align: justify;
-    margin: 0 1vw;
+@media (max-width: 1200px) {
+    .o-mnie-content {
+        grid-template-columns: auto;
+        grid-template-rows: 50% 50%;
+        grid-template-areas: "left" "right";
+    }
+}
+
+.o-mnie-left {
+    grid-area: left;
+}
+
+.o-mnie-right {
+    grid-area: right;
 }
 
 #kontakt textarea {
@@ -333,7 +347,7 @@ footer img {
     grid-row: 3;
 }
 
-@media (min-width: calc(768px + 1px)) {
+@media (min-width: calc(769px)) {
     .project {
         grid-template-rows: auto 1fr;
         grid-template-columns: 40% 60%;
@@ -369,5 +383,38 @@ footer img {
     .project:nth-child(even) {
         grid-template-columns: 60% 40%;
         grid-template-areas: "title img" "desc img";
+    }
+}
+
+@media (max-width: 768px) {
+    .nav {
+        font-size: 0.7rem;
+    }
+
+    .banner {
+        clip-path: none;
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+
+    #portfolio {
+        clip-path: none;
+        padding-bottom: 0;
+    }
+
+    .pr-header {
+        margin: 0;
+        height: 4rem;
+        background: none;
+    }
+
+    .pr-h {
+        display: none;
+    }
+
+    .pr-header > h1 {
+        margin-top: 0 !important;
+        color: #000;
+        padding: 0;
     }
 }
